# solyx_mvp

./: .gitignore  .pre-commit-config.yaml  README.md  gpu_tracker.db  requirements.txt
cmo-service/: Dockerfile  check_env.py  load_env.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
cmo-service/kubernetes/: cmo-deployment.yaml  drm-deployment.yaml
cmo-service/routes/: gpus.py  jobs.py
cmo-service/tests/: test_api_endpoints.py
drm-core/: Dockerfile  README.md  gpu_tracker.db  pyproject.toml  requirements-dev.txt  requirements.txt  test_gpu_tracker.db
drm-core/kubernetes/: drm-deployment.yaml
drm-core/src/: main.py
drm-core/src/database/: connection.py  gpu_tracker.db  models.py  repository.py
drm-core/src/drm_core/: __init__.py  __main__.py  base.py  core.py  job.py  main.py  models.py  ray_manager.py  repository.py  resource_monitor.py  scheduler.py  tracker.py
drm-core/src/energy/: tracker.py
drm-core/src/providers/: __init__.py  base.py  coreweave.py  lambdalabs.py  vastai.py
drm-core/src/scheduler/: __init__.py  basic_scheduler.py
drm-core/src/workload/: ray_manager.py
drm-core/tests/: conftest.py  test_drm_core.py  test_gpu_tracker.db  test_job_management.py  test_main.py  test_providers.py  test_repository.py  test_scheduler.py
drm-core/tools/scripts/: check_env.py  cleanup_database.py  clear_gpu_database.py  create_test_allocation.py  debug_providers.py  manage_job_activity.py  query_gpu_providers.py  query_gpus.py  show_database_schema.py  update_gpu_database.py  view_job_activity.py  view_stored_gpus.py
(+56 files in other folders)
